# rsynced

./: README.md
rsynced-client/: CMakeLists.txt  CMakePresets.json  README.md  justfile
rsynced-client/src/: CMakeLists.txt
rsynced-server/: README.md
rsynced-web/: package.json
